update content as per article

--- a/generics-in-csharp/generics-in-csharp.csproj
+++ b/generics-in-csharp/generics-in-csharp.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LinkedList.cs" />
-    <Compile Include="LinkedListFloat.cs" />
+    <Compile Include="LinkedListString.cs" />
     <Compile Include="LinkedListObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
